Row selection and alignments fixed in the Process details page (#4787)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-process.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-process.scss
@@ -2,12 +2,12 @@
   font-weight: 100;
   color: text-color(primary, lightest);
   background-color: $table-panel-header-color;
-  height: 70px;
+  height: 67px;
   padding-right: rsa-whitespace();
   padding-left: 0;
   padding-top: rsa-whitespace(less);
   .toggle-icon {
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     float: right;
     padding-right: 23px;
   }
@@ -151,6 +151,9 @@
     .rsa-data-table {
       min-height: 130px;
       height: auto;
+      .rsa-data-table-body {
+        overflow-y: hidden;
+      }
       .rsa-data-table-body-row {
         cursor: default !important;
         width: fit-content;
