--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_manifest.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_manifest.scss
@@ -57,7 +57,7 @@
     z-index: 100;
     background-color: $host-detail-background;
     width: 100%;
-    height: 82vh;
+    height: 100%;
     left:100%;
     .close-zone {
       padding-top: 0;
