--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_process-host-details.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_process-host-details.scss
@@ -19,6 +19,7 @@
         height: 15px;
       }
       .rsa-nav-tab {
+        height: 53px;
         padding: 1rem;
         margin-bottom: 1rem;
         width: 89px;
@@ -30,9 +31,10 @@
         padding-top: 1.4rem;
       }
       .rsa-nav-tab-group {
+        height: 39px;
         border-bottom: 1px solid text-color(primary, dark);
       }
-      
+
     }
     .process-content-box-wrapper {
       width: 100%;
